--- a/CSS/bolt.css
+++ b/CSS/bolt.css
@@ -10,3 +10,31 @@
 *, *::before, *::after{
     box-sizing: border-box;
 }
+
+
+/*Typography*/
+html{
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+    font-family: Inter, Arial, Helvetica, sans-serif;}
+    
+h1{
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #fff;
+}
+@media screen and (min-width:768px){
+    h1{
+        font-size: 5rem;
+    }
+}
+h2{
+    font-size:1.5rem;
+}
+
+h3{
+    font-size: 1rem;
+}
+a{
+    text-decoration: none;
+}
