--- a/CSS/bolt.css
+++ b/CSS/bolt.css
@@ -43,3 +43,22 @@ a{
 .link{
     color: var(--color-link);
 }
+
+/*Button*/
+.btn{
+    font-size: 1.3rem;
+    font-weight: 700;
+    border: none;
+    border-radius: 40px;
+    background-color: var(--color-btn);
+    color: #fff;
+    padding: 1.2rem 3rem;
+    height: 40px;
+    white-space: nowrap;   
+}
+
+.btn--block{
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
