--- a/CSS/bolt.css
+++ b/CSS/bolt.css
@@ -146,3 +146,54 @@ a{
     opacity: 1;
     transition: opacity 0.7s;
 }
+
+/*Navigation Bar*/
+.Nav{
+    display: flex;
+   justify-content: space-between;
+   background-color: #fff;
+   align-items: center;
+   flex-wrap: nowrap;
+   
+   
+}
+.nav__list{
+   max-width: 100%;
+}
+.nav__item > a {
+    color: #333;
+}
+
+.nav__item{
+    list-style: none;
+    margin-right: 2rem;
+    white-space: nowrap;
+    
+}
+.Nav .btn{
+    margin-right: 2rem;
+}
+    
+.nav__logo{
+    width: 100px;
+    height: 70px;
+}
+.menuicon{
+    width: 50px;
+    height: 50px;
+}
+@media screen and (min-width:768px){
+    .menuicon{
+    display: none;   
+ }
+/* to make a collapsible item visible, set max height to 100% and opacity to 1 after setting opacity to 0*/
+     .nav__list{
+        max-height: 100%;
+        opacity: 1;
+        transform: opacity 7s;
+        display: flex;
+        width: auto;
+        align-items: flex-end;
+        font-size: 1.5rem;
+    }
+ }
